fixed overflow problem

--- a/capstone/app/assets/stylesheets/guest_lists.css.scss
+++ b/capstone/app/assets/stylesheets/guest_lists.css.scss
@@ -144,7 +144,7 @@ footer a:hover {
   margin-left: auto;
   margin-right: auto;
   background-color: #fce8ee;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 table {
@@ -242,6 +242,7 @@ input[type='submit']:hover {
 #sent {
   position: relative;
   visibility: visible;
+
 }
 
 #sent p {
@@ -260,6 +261,15 @@ input[type='submit']:hover {
   left:0;
   background-color: #9871a8;
   border-radius: 14px;
+}
+
+#loop_hole{
+  width: 1200px;
+  min-height: 10px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fce8ee;
 }
 
 select {
